<resources>

    <string name="en_privacy_policy">Privacy Policy</string>

    <string name="app_name">SMS-19</string>
    <string name="en_main_title">Please fill the form</string>
    <string name="en_reason_text">Select your reason</string>
    <string name="en_send_button">SEND SMS</string>
    <string name="en_copyrights">All rights reserved by George Patsias.</string>
    <string name="en_postal_code_hint">Postal Code</string>
    <string name="en_id_number">Passport or ID number</string>
    <string name="en_selection_1">Visiting a pharmacy, a doctor or for a blood donation.</string>
    <string name="en_selection_2">Visiting a store to obtain essential goods or services.</string>
    <string name="en_selection_3">Visiting a bank if a transaction cannot be done online.</string>
    <string name="en_selection_4">Absolutely necessary visits to state services, public-sector services or municipal services.</string>
    <string name="en_selection_5">Visiting persons who are unable to help themselves or are in self-isolation.</string>
    <string name="en_selection_6">Going outdoors for exercise or to walk one’s pet, for two persons at a maximum and the distance must be close to one’s residence.</string>
    <string name="en_selection_7">Attending ceremonies like funerals, weddings or baptisms, provided you are a first-degree or second-degree relative and the gathering must be no more than 10 people at any one time.</string>
    <string name="en_selection_8">Any other reason (generic) for moving outside that may be justified despite the restrictions.</string>

    <string name="gr_main_title">Συμπληρώστε την φόρμα</string>
    <string name="gr_reason_text">Επιλέξετε λόγο μετάβασης</string>
    <string name="gr_send_button">ΑΠΟΣΤΟΛΗ</string>
    <string name="gr_postal_code_hint">Ταχυδρομικός Κώδικας</string>
    <string name="gr_id_number">Διαβατήριο ή Αριθμός Ταυτότητας</string>
    <string name="gr_selection_1">Μετάβαση σε φαρμακείο ή για αιμοδοσία ή επίσκεψη σε γιατρό.</string>
    <string name="gr_selection_2">Μετάβαση σε κατάστημα για αγορά ή προμήθεια αγαθών/υπηρεσιών πρώτης ανάγκης.</string>
    <string name="gr_selection_3">Μετάβαση σε τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.</string>
    <string name="gr_selection_4">Απόλυτα αναγκαίες επισκέψεις σε κρατικές υπηρεσίες ή υπηρεσίες του ευρύτερου δημόσιου τομέα και της Τ.Α.</string>
    <string name="gr_selection_5">Διακίνηση για παροχή βοήθειας σε άτομα που αδυνατούν να αυτοεξυπηρετηθούν ή που οφείλουν να αυτοπροστατευθούν ή βρίσκονται σε αυτοπεριορισμό ή και σε χώρους υποχρεωτικού περιορισμού - καραντίνα.</string>
    <string name="gr_selection_6">Μετακίνηση για σωματική άσκηση ή για τις ανάγκες κατοικιδίου ζώου εφόσον δεν υπερβαίνουν τα δυο άτομα και περιορίζονται σε γειτνιάζουσες με την κατοικία περιοχές.</string>
    <string name="gr_selection_7">Μετάβαση σε κηδεία, γάμο, βάφτιση από συγγενείς πρώτου και δευτέρου βαθμού που δεν υπερβαίνουν τα 10 άτομα.</string>
    <string name="gr_selection_8">Οποιοσδήποτε άλλος σκοπός μετακίνησης που μπορεί να δικαιολογηθεί με βάση τα μέτρα απαγόρευσης κυκλοφορίας.</string>

    <string name="privacy_policy">
George Patsias built the SMS-19 app as a Free app. This SERVICE is provided by George Patsias at no cost and is intended for use as is.

This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.

If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at SMS-19 unless otherwise defined in this Privacy Policy.

Information Collection and Use

For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

Google Play Services
Log Data

I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

Cookies

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these cookies explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

Service Providers

I may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

Security

I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

Links to Other Sites

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

Children’s Privacy

These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.

Changes to This Privacy Policy

I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

Contact Us

If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at info@georgepatsias.com.
    </string>
</resources>
