<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".PrivacyPolicy">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:layout_marginTop="30dp"/>

                <include
                    layout="@layout/layout_privacy_policy"/>

                <TextView
                    style="@style/parent"
                    android:id="@+id/privacy_policy"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/en_privacy_policy" />

                <TextView
                    style="@style/parent"
                    android:id="@+id/openWebsite"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/en_copyrights" />



            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>


